kdesdk (4:4.7.1-0r0) UNRELEASED; urgency=low

  [ Daniele E. Domenichelli ]
  * New upstream release.
  * Update build dependencies:
    * Bump kde-sc-dev-latest to 4:4.7.1.
    * Bump kdepimlibs5-dev to >= 4:4.7.
    * Bump libkonq5-dev to >= 4:4.7.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 27 Sep 2011 13:26:57 +0100

kdesdk (4:4.6.5-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Update symbol files.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.
  * Update symbols files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:54:00 +0300

kdesdk (4:4.6.3-1) unstable; urgency=low

  * New upstream release. 

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:39 +0300

kdesdk (4:4.6.2-2) experimental; urgency=low

  * Confirm symbol files on more debian arches.
  * Pass -c0 to dpkg-gensymbols.
  * Do not use wildcards in okteta-dev.install.
  * Do not export private classes in libkastencore (patch
    dont_export_private_classes.diff).
  * Bump Standards-Version to 3.9.2: no changes needed.

 -- Modestas Vainius <modax@debian.org>  Mon, 02 May 2011 03:55:54 +0300

kdesdk (4:4.6.2-1) experimental; urgency=low

  * New upstream release:
    - fixes plugin loading in kate sessions (Closes: #525853)
    - updates kate man page with respect to instance creation defaults
      (Closes: #598443)
    - fixes cursor position with static word-wrap in Kate (Closes: #570409)
    - xml2pot creates .pot files with the correct mimetype (Closes: #326060)
  * Update installed files.
  * Update lintian overrides.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Strip sequence numbers from debian/patches.
  * Strip trailing whitespace in debian/copyright.